# mailkube-python

./: .gitignore  .jscpd.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
.rules/: RELEASE.md  SOLID_DRY_KISS.md
examples/: async_send.py  send_with_attachments.py  send_with_template.py  simple_send.py  webhook_receiver_flask.py
scripts/: check-rule-index.sh
src/mailkube/: __init__.py  _async_client.py  _base_client.py  _client.py  _exceptions.py  _logging.py  _transport.py  _version.py  webhooks.py
src/mailkube/resources/: __init__.py  emails.py
src/mailkube/types/: __init__.py  events.py  params.py  responses.py
tests/: conftest.py  test_async_client.py  test_client.py  test_exceptions.py  test_logging.py  test_package.py  test_serialization.py  test_webhooks.py
