[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailkube"
version = "1.0.0"
description = "Mailkube Python SDK"
authors = [{ name = "Mailtactic, Corp." }]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = ["mailkube", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7,<3",
]

[project.urls]
Homepage = "https://github.com/mailkube/mailkube"
Repository = "https://github.com/mailkube/mailkube"
Issues = "https://github.com/mailkube/mailkube/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mailkube"]

# ── Lint & format ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]
# `examples/` holds runnable illustrative scripts (excluded from the wheel), not library code.
extend-exclude = ["examples"]

[tool.ruff.lint]
# E/F/I/UP/B: baseline. C901: complexity (KISS). D: docstrings (documentation).
# SIM/PL/RUF: simplification + refactor smells. ARG: unused args (ISP smell). TRY: exception hygiene.
select = ["E", "F", "I", "UP", "B", "C901", "D", "SIM", "PL", "RUF", "ARG", "TRY"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004", "ARG", "S101"]

# ── Type checking ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["src"]

# ── Tests & coverage (90% line + branch, enforced) ────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=mailkube --cov-branch --cov-report=term-missing:skip-covered --cov-fail-under=90"

[tool.coverage.run]
source = ["mailkube"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

# ── Release automation (Conventional Commits → SemVer → PyPI via OIDC) ─────────
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install uv && uv build"
commit_parser = "conventional"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
